# PyIR

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
crowelab_pyir.egg-info/: PKG-INFO  SOURCES.txt
pyir/: arg_parse.py  factory.py  resource_utils.py
pyir/data/crowelab_data/: human_TCR_C.fasta
tests/: test_basic.py
